--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 html, body {
   margin:0px;
 	width: 100%;
-	height: 100%;
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size:16px;
-  font-weight:400;
+  height: 100%;
+  font-family: 'Open Sans', sans-serif;
+  font-size:15px;
+  font-weight:300;
   line-height:1.5;
   color:#212529;
 
@@ -33,13 +33,30 @@ html, body {
 
 }
 
+h1 {
+  font-family: 'Anton', sans-serif;
+  font-size:2.441em;
+  letter-spacing: 0.01em;
+
+}
+
+h2 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.25em;
+  text-transform: uppercase;
+  letter-spacing: 0.11em;
+
+}
+
 /* NAVIGATION */
 
 .navbar  {
   grid-row: 4 / 5;
+  grid-column: 1 / -1;
   bottom: 100vh;
   justify-self: end;
   align-self: center;
+  z-index: 1234;
 }
 
 .nav-item {
@@ -49,7 +66,8 @@ html, body {
 
 .nav-link {
   color: black;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Anton', sans-serif;
+  font-size: 1.563em;
   font-weight: 900;
   text-decoration: none;
   /* font-size:2em; */
@@ -75,6 +93,7 @@ html, body {
 .header {
   margin:0 auto;
   grid-row: 1 / 2;
+  grid-column: 1 /-1;
 }
 
 .header-logo {
@@ -91,6 +110,7 @@ html, body {
 .social-icons {
   margin: 0 auto;
   grid-row: 2 / 3;
+  grid-column: 1 / -1;
   justify-items: center;
   align-items: center;
 
@@ -187,3 +207,135 @@ html, body {
     overflow: scroll;
   }
 }
+
+/* CONTACT FORM */
+
+.contact-form {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50px 100px 50px;
+  align-items: center;
+}
+
+.field {
+  margin: 10px;
+  height: 20px;
+}
+
+.name-email {
+}
+
+.field.name {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  margin-left: 6px;
+  margin-top: 40px;
+}
+
+.field.email {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  margin-top: 25px;
+}
+
+.field.message label {
+  display: block;
+}
+
+.field.message {
+  grid-column: 2 / 3;
+  grid-row: 1 /3;
+  align-self: start;
+}
+
+input {
+  margin: 10px;
+  padding: 5px;
+  height: 2em;
+  width: 50%;
+}
+
+textarea {
+  padding: 10px;
+}
+
+.submit-button {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+  font-size: 1.75em;
+  background: none;
+  cursor: pointer;
+  margin-top: 50px;
+
+}
+
+/* ABOUT PAGE */
+
+.about-portrait {
+  float: right;
+  margin: 20px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.about-headline1 {
+  display: inline;
+
+}
+
+.about-headline2 {
+  display: inline;
+}
+
+.about-paragraph {
+  display:block;
+}
+
+/* FLIPPING EFFECT */
+
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000px;
+}
+
+/* flip the pane when hovered */
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+  transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back {
+	width: 215px;
+	height: 344px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
+
