--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -108,7 +108,7 @@
 
 .overlay-inner {
 	background: white;
-	width: 500px;
+	/*width: 390px; */
 	padding: 20px;
 	justify-content: center;
 	align-content: center;
